k3s/cluster/apps/nas-attached/llm/workload/deployment-wyoming-faster-whisper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyoming-faster-whisper
  namespace: llm
  labels:
    app.kubernetes.io/name: wyoming-faster-whisper
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wyoming-faster-whisper
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wyoming-faster-whisper
        app.kubernetes.io/component: app
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        gpu: nvidia
        kubernetes.io/hostname: nimgerianor
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 100
      containers:
        - name: wyoming-faster-whisper
          image: lscr.io/linuxserver/faster-whisper:3.5.0-gpu
          imagePullPolicy: IfNotPresent
          ports:
            - name: wyoming
              containerPort: 10300
          readinessProbe:
            tcpSocket:
              port: wyoming
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: wyoming
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              nvidia.com/gpu.shared: 1
            limits:
              memory: 8Gi
              nvidia.com/gpu.shared: 1
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wyoming-faster-whisper-data
