k3s/cluster/apps/nas-attached/llm/workload/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: llm
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.5
  selector:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 11434
      targetPort: http
