k3s/cluster/apps/nas-attached/llm/workload/service-openwakeword.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwakeword
  namespace: llm
spec:
  selector:
    app.kubernetes.io/name: openwakeword
    app.kubernetes.io/component: app
  ports:
    - name: wyoming
      port: 10400
      targetPort: wyoming
