k3s/cluster/apps/nas-attached/llm/workload/service-openwebui.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: llm
spec:
  selector:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
