k3s/cluster/apps/nas-attached/llm/workload/service-wyoming-faster-whisper.yaml
apiVersion: v1
kind: Service
metadata:
  name: wyoming-faster-whisper
  namespace: llm
spec:
  selector:
    app.kubernetes.io/name: wyoming-faster-whisper
    app.kubernetes.io/component: app
  ports:
    - name: wyoming
      port: 10300
      targetPort: wyoming
